--- a/src/content/articles/2025-07-26-dummy2.md
+++ b/src/content/articles/2025-07-26-dummy2.md
@@ -10,4 +10,4 @@ tags: ["tag2", "tag3"]
 これも、ダミーの記事です。
 
 詳しくは
-[こちら](https://reversed-r.dev/blog/articles/20241202001)
+[こちら](/articles/2025-07-28-website-replaced-with-astrojs)
