feat: article pages dynamic ogp image

--- a/src/content/articles/2025-07-31-nec-r120g-setup.md
+++ b/src/content/articles/2025-07-31-nec-r120g-setup.md
@@ -3,6 +3,7 @@ title: "ラックサーバ NEC Express 5800 R120g のセットアップをする
 date: "2025-07-31"
 description: "古いながらもデカリソース"
 tags: ["on-premise", "rack server", "NEC Express 5800"]
+thumbnailImage: "thumbnail-image.jpg"
 ---
 
 こんにちは、ゃーです。
